<resources>
    <string name="app_name">Demo</string>
    <string name="account">Dont have an account? </string>
    <string name="sing_up"><b><u>Sign up</u></b></string>
    <string name="welcome_str">Welcome back</string>
    <string name="your_account_str">Login to your account</string>
    <string name="remember_str">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="naturequets">Whether it is watching blue, rolling waves crash against the sandy shore or hearing birds chirping in a green, luscious forest, there is something so remarkable and beautiful about being immersed in nature. It’s easy to be swept away with today’s technology and fast-paced living, but no matter where you are, nature always has a way of bringing peace to the mind and grounding a person.</string>
    <string name="plantInformation">The best app for your plant</string>
    <string name="fullname">Full Name</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
</resources>