<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/idLeafImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/leafimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBackPress"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back_arrow"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:padding="8dp"
        android:backgroundTint="@color/white"
        android:background="@drawable/white_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgWave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img2Leaf"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/leafimg"
        app:layout_constraintBottom_toBottomOf="@+id/idLogInText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/idLogInText"
        app:layout_constraintTop_toTopOf="@+id/txRegister" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_str"
        android:textColor="@color/darkGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLeafImage" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/idLogInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/your_account_str"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/lightgray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txRegister" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layFullName"
        android:layout_width="0dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        style="@style/LoginTextinputlayoutstyle"
        app:layout_constraintEnd_toEndOf="@id/guidRight"
        app:layout_constraintStart_toStartOf="@id/guidLeft"
        app:layout_constraintTop_toBottomOf="@+id/idLogInText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:lines="1"
            android:layout_height="wrap_content"
            android:drawablePadding="13dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/email" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/LoginTextinputlayoutstyle"
        app:layout_constraintEnd_toEndOf="@id/guidRight"
        app:layout_constraintStart_toStartOf="@id/guidLeft"
        app:layout_constraintTop_toBottomOf="@+id/layFullName"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:drawablePadding="13dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/idCheckBox"
        app:layout_constraintStart_toStartOf="@+id/guidLeft"
        app:layout_constraintTop_toBottomOf="@+id/layEmail"
        android:layout_width="30dp"
        android:gravity="center"
        style="@style/CustomCheckbox02"
        android:layout_height="35dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txRememberme"
        app:layout_constraintTop_toBottomOf="@+id/layEmail"
        app:layout_constraintTop_toTopOf="@+id/idCheckBox"
        app:layout_constraintStart_toEndOf="@+id/idCheckBox"
        android:text="@string/remember_str"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txForget"
        app:layout_constraintTop_toBottomOf="@+id/layEmail"
        app:layout_constraintEnd_toEndOf="@+id/guidRight"
        android:textStyle="bold"
        android:textColor="@color/darkGreen"
        android:text="@string/forgot_password"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btlog"
        app:layout_constraintTop_toBottomOf="@+id/txRememberme"
        app:layout_constraintStart_toStartOf="@id/guidLeft"
        app:layout_constraintEnd_toEndOf="@id/guidRight"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textColor="@color/white"
        android:padding="15dp"
        app:cornerRadius="30dp"
        app:rippleColor="@color/white"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/idNoAccount"
        app:layout_constraintTop_toBottomOf="@+id/btSingupid"
        app:layout_constraintStart_toStartOf="@+id/guidLeft"
        android:layout_marginStart="80dp"
        android:text="@string/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textview.MaterialTextView
    android:id="@+id/txSingUp"
    android:text="@string/sing_up"
    android:textColor="@color/darkGreen"
    android:layout_marginStart="5dp"
    app:layout_constraintTop_toBottomOf="@+id/btSingupid"
    app:layout_constraintStart_toEndOf="@+id/idNoAccount"
    android:layout_width="0dp"
    android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>