<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46FF1F"
    tools:context=".HomeActivityNew">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:src="@drawable/ic_baseline_logout_24"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgProfile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:src="@drawable/ic_baseline_person_24"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:hint="@string/fullname"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txPassword"
        app:layout_constraintTop_toBottomOf="@+id/txName"
        android:hint="@string/pass"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txEmail"
        app:layout_constraintTop_toBottomOf="@+id/txPassword"
        android:hint="@string/email"
        android:textSize="18sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        app:layout_constraintTop_toBottomOf="@+id/txEmail"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>